--- a/ErrorHandling/Exceptions/pom.xml
+++ b/ErrorHandling/Exceptions/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Sem2</groupId>
-    <artifactId>ErrorHandling</artifactId>
+    <artifactId>Exceptions</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
 
-    <name>ErrorHandling</name>
+    <name>Exceptions</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
